# nest-nomics

./: LICENSE  README.md  analysis.ipynb  pyproject.toml  rightmove_scrape.ipynb
src/: postcodes.py
src/rightmove/: client.py  models.py
