[tool.poetry]
name = "nest-nomics"
version = "0.1.0"
description = ""
authors = ["antoinedao <antoinedao1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
pydantic = "^2.10.6"
pandas = "^2.2.3"
folium = "^0.19.4"
geopy = "^2.4.1"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
aiohttp = "^3.11.11"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
